Add macro to enable using volatile
To compare the influence of volatile to compiler optimization, a target
"volatile" is added in makefile. Use "make volatile" to compile and
objdump test_volatile.elf to see the difference compared to the result
of "make".

--- a/2_volatile/makefile
+++ b/2_volatile/makefile
@@ -6,5 +6,10 @@ test.elf: test.c
 	$(CROSS-COMPILER)gcc -O1 -Wall -std=c11 -mcpu=cortex-m4 -mthumb -nostartfiles -T empty.ld test.c -o test.elf
 	$(CROSS-COMPILER)objdump -D test.elf
 
+volatile: test.c
+	$(CROSS-COMPILER)gcc -DUSE_VOLATILE -O1 -Wall -std=c11 -mcpu=cortex-m4 -mthumb -nostartfiles -T empty.ld test.c -o test_volatile.elf
+	$(CROSS-COMPILER)objdump -D test_volatile.elf
+
+.PHONY:
 clean:
 	rm -f *.o *.elf
